--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,12 +1,10 @@
 .nav {
   /* flex box layout */
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  margin: 0 0 30px;
-  background-color: #00acb0;
-  overflow: hidden;
+    margin: 0 0 30px;
+    background-color: #00acb0;
+    overflow: hidden;
+    justify-content: center;
 }
 
 .nav a {
