--- a/src/components/_QuickStepHomePage/QuickStepHomePage.css
+++ b/src/components/_QuickStepHomePage/QuickStepHomePage.css
@@ -4,6 +4,11 @@
     align-items: center;
 }
 
+.homePageTitle {
+    border: 1px solid black;
+    padding: 10px;
+}
+
 .modeSelectDiv {
     /* width: 350px; */
     justify-content: center;
