--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,11 @@ body,
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  /* margin: 0px; */
+  margin: 0px;
+  background-image: url("../../../public/images/running-background.jpeg");
+  background-repeat: no-repeat;
+  background-position: 0%;
+  background-size: 600px 1000px;
 }
 
 img {
@@ -74,6 +78,25 @@ Button
   background-color: transparent;
   border-color: #008183;
   color: #008183;
+}
+
+.stepButton {
+  background: #095C8A;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
+width: 110px;
+height: 47px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 23px;
+text-align: center;
+
+color: #FFFFFF;
+
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 /* --------------------------------------------------------------------------------
