--- a/src/components/_QuickStepHomePage/QuickStepHomePage.css
+++ b/src/components/_QuickStepHomePage/QuickStepHomePage.css
@@ -5,8 +5,9 @@
 }
 
 .homePageTitle {
-    border: 1px solid black;
+    border: 2px solid black;
     padding: 10px;
+    background-color: aqua;
 }
 
 .modeSelectDiv {
@@ -21,6 +22,7 @@
     margin: 10px;
     width: 140px;
     height: 145px;
+    background-color: aqua;
     box-shadow: 5px 10px 4px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
