add css styling

--- a/src/components/_ProfilePage/ProfilePage.css
+++ b/src/components/_ProfilePage/ProfilePage.css
@@ -9,7 +9,7 @@ p {
     border: 2px solid black;
     margin-top: 10%;
     padding: 5%;
-    background-color: aqua;
+    background-color: white;
 }
 
 .inputSize {
