--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -119,10 +119,11 @@ Form Treatment
 
 .formPanel {
   box-sizing: border-box;
-  width: 400px;
+  width: 350px;
   max-width: 100%;
   padding: 25px;
-  margin: 0 auto 20px;
+  margin: auto;
+  margin-top: 20px;
   background-color: #efefef;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
