--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,6 +13,12 @@ body {
   background-size: 600px 1000px;
 }
 
+.bodyContainer {
+  background-color: rgba(0, 0, 0, 0.25);
+  height: 100%;
+  width: 100%;
+}
+
 img {
   display: inline-block;
   max-width: 100%;
