--- a/src/components/_ProfilePage/ProfilePage.css
+++ b/src/components/_ProfilePage/ProfilePage.css
@@ -16,6 +16,11 @@ p {
     text-align: center;
 }
 
+.profileContainer p {
+    display: flex;
+    justify-content: center;
+}
+
 .inputSize {
     width: 40px;
     margin: 0;
