--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,8 +15,7 @@ body {
 
 .bodyContainer {
   background-color: rgba(0, 0, 0, 0.25);
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
 }
 
 img {
