--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,6 +16,8 @@ body {
 .bodyContainer {
   background-color: rgba(0, 0, 0, 0.25);
   min-height: 100%;
+  width: 100vw;
+  position: absolute;
 }
 
 img {
