--- a/src/components/_ProfilePage/ProfilePage.css
+++ b/src/components/_ProfilePage/ProfilePage.css
@@ -4,8 +4,8 @@
 }
 
 .profileContainer{
-    width: 70vw;
-    max-height: 500px;
+    width: 75vw;
+    min-height: 400px;
     border: 2px solid black;
     margin-top: 10%;
     margin-left: auto;
