--- a/src/components/_ProfilePage/ProfilePage.css
+++ b/src/components/_ProfilePage/ProfilePage.css
@@ -11,18 +11,24 @@
     margin-left: auto;
     margin-right: auto;
     padding: 5%;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     margin-bottom: 20%;
     text-align: center;
 }
 
-/* .profileContainer p {
-    display: flex;
-    justify-content: center;
-    justify-content: space-between;
-} */
-
 .inputSize {
     width: 40px;
     margin: 0;
+}
+
+img {
+    border: 2px solid black;
+    border-radius: 100px;
+}
+
+.buttonDiv {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
 }
