--- a/src/components/_ProfilePage/ProfilePage.css
+++ b/src/components/_ProfilePage/ProfilePage.css
@@ -4,7 +4,7 @@
 }
 
 .profileContainer{
-    width: 75vw;
+    width: 75%;
     min-height: 400px;
     border: 2px solid black;
     margin-top: 10%;
