--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,8 +5,6 @@ body,
 
 }
 
-
-
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   /* margin: 0px; */
@@ -38,6 +36,10 @@ Container
 
 .container {
   padding: 20px;
+}
+
+.loginDiv {
+  display: flex;
 }
 
 /* --------------------------------------------------------------------------------
