--- a/src/components/_ProfilePage/ProfilePage.css
+++ b/src/components/_ProfilePage/ProfilePage.css
@@ -14,6 +14,8 @@
     background-color: rgb(255, 255, 255);
     margin-bottom: 20%;
     text-align: center;
+    box-shadow: 5px 10px 4px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
 }
 
 .inputSize {
