--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -29,9 +29,9 @@ img {
   display: inline-block;
   max-width: 100%;
 }
-------------------------------------------------------------------------------
+/* ------------------------------------------------------------------------------
 Container
--------------------------------------------------------------------------------- */
+--------------------------------------------------------------------------------  */
 
 .container {
   padding: 20px;
